# Configinator5000

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: .configinator5000.cpp.swp  .configinator5000.hpp.swp  CMakeLists.txt  configinator5000.cpp  configinator5000.hpp
tests/: .t01-start.cpp.swp  CMakeLists.txt  t01-settings.cpp  t02-parse.cpp
